// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The course should render correctly, with 0 lessons when showLessons is falsy 1`] = `
<li
  key="SEMI"
>
  <h3>
    SEMI - Seminaire Innovation
     
    <Link
      replace={false}
      to="/courses/1/seminaire_innovation"
    >
       détails
    </Link>
  </h3>
  <p>
    Main Teacher : 
    J-M. Dalle
    <br />
    Description : 
    This course is the third of the innovation seminary
    <br />
  </p>
</li>
`;

exports[`The course should render correctly, with 4 lessons when showLessons is truthy, moreover, a button should be here and create empty lesson 1`] = `
<li
  key="SEMI"
>
  <h3>
    SEMI - Seminaire Innovation
     
    <Link
      replace={false}
      to="/courses/1/seminaire_innovation"
    >
       détails
    </Link>
  </h3>
  <p>
    Main Teacher : 
    J-M. Dalle
    <br />
    Description : 
    This course is the third of the innovation seminary
    <br />
  </p>
  <ul>
    <Connect(Lesson)
      course_id={1}
      course_short_name="SEMI"
      date="2019-01-18"
      description="JMD will be talking about Agoranov for one long hour"
      editable={true}
      hour="16:45"
      key="1_1"
      lesson_number={1}
      location="Agoranov"
    />
    <Connect(Lesson)
      course_id={1}
      course_short_name="SEMI"
      description="JB Bengo will be talking about very interesting things"
      editable={true}
      hour="15:15"
      key="1_2"
      lesson_number={2}
      location="Telecom"
    />
    <Connect(Lesson)
      course_id={1}
      course_short_name="SEMI"
      date="2019-01-18"
      description="JB Bengo will be talking about very interesting things"
      editable={true}
      hour="15:18"
      key="1_3"
      lesson_number={3}
      location="Telecom"
    />
    <Connect(Lesson)
      course_id={1}
      course_short_name="SEMI"
      date="2019-01-18"
      description="Version2 : JB Bengo will be talking about very interesting things"
      editable={true}
      hour="15:18"
      key="1_4"
      lesson_number={4}
      location="Telecom"
    />
    <li>
      <button
        className="btn btn-link"
        onClick={[Function]}
      >
        Ajouter un cours
      </button>
    </li>
  </ul>
</li>
`;
